--- a/gnome/.themes/WhiteSur-Dark/gnome-shell/gnome-shell.css
+++ b/gnome/.themes/WhiteSur-Dark/gnome-shell/gnome-shell.css
@@ -18,6 +18,7 @@
  * Inc., 51 Franklin St - Fifth Floor, Boston, MA 02110-1301 USA.
  */
 stage {
+  font-family: 'Noto Sans';
   font-size: 9.75pt;
   font-weight: 400;
   color: #dedede;
